master

2.38.4
- Mayhem
  Fix a little regression introduced in 2.38.0 for webkit browsers.
- noface
  Change some defaults in the settings.
- Queue
  Add Relative Post Dates ("35 seconds ago"), disabled by default.

2.38.3
- noface
  Only remove <wbr>'s should there be an url to avoid reformatting where not necessary.

2.38.2
- BRBCarbon
  Added archive redirection to /int/.
- noface
  Added new option 'Quote Inline only on index'.

2.38.1
- noface
  Replacing html directly is a bad idea.

2.38.0
- James Campos
  Don't expand pdfs
- Mayhem
  Fix image expanding.
- noface
  More breakage.
  Basic fix for Linkification and Embedding.

2.37.6 - 2.37.9
- aeosynth
  Don't expand pdfs
  Beep on new post to completely read thread
- Mayhem
  Fix quoting.
  Fix successful posting causing errors.
  Fix 4chan X trying to interact with >>>/board/rules links.
  Fix dead quotes.
- noface
  Various breakage.

2.37.5
- Mayhem
  Fix posting warning not displaying the reason.

2.37.4
- zixaphir
  Added Per-Board Personas.
- Mayhem
  Fix selection quoting on Opera.
  Fix history bug with Persistent QR enabled on Chrome.
- noface
  Added new feature 'Remove Spoilers'.
  Added input to specify height and width of embeds.
  Fixed Anonymize not working on stubs.
  Fixed deadquotes showing up in code-tags.

2.37.3
- Mayhem
  Added catalog support.
  Sync thread hiding between index and catalog.
  Add /c/ archived thread and image redirection.

2.37.2
- noface
  Added liveleak embedding and Vimeo + SoundCloud Link Title.
  Added keybind for Catalog Links toggle.
  Fixed Anomyize not working on hovered posts.

2.37.1
- noface
  Added Catalog Links toggle.

2.37.0
- noface
  Exclude 4chan x from executing on catalogs.
  Added Link Title for Youtube links.
  Added Ban Checker.

2.36.9
- noface
  Improved Linkifier to be much lighter.
  Readded archiver for /e/.
  Embedding:
    - Adds support for SoundCloud, Vocaroo, mp3/ogg/wav files.
    - Adds a menu button 'Embed all in post'.
- Mayhem